Fix awkward bottom cutting off

--- a/src/styl/iphone-x-series.styl
+++ b/src/styl/iphone-x-series.styl
@@ -146,17 +146,15 @@ $iphone-x-styles() {
     #admob-iframe {
       padding-top: constant(safe-area-inset-top);
       padding-right: constant(safe-area-inset-right);
-      padding-bottom: constant(safe-area-inset-bottom);
       padding-left: constant(safe-area-inset-left);
       width: calc(100vw - constant(safe-area-inset-left) - constant(safe-area-inset-right));
-      height: calc(100vh - constant(safe-area-inset-top) - constant(safe-area-inset-bottom));
+      height: calc(100vh - constant(safe-area-inset-top));
 
       padding-top: env(safe-area-inset-top);
       padding-right: env(safe-area-inset-right);
-      padding-bottom: env(safe-area-inset-bottom);
       padding-left: env(safe-area-inset-left);
       width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
-      height: calc(100vh - env(safe-area-inset-top) - env(safe-area-inset-bottom));
+      height: calc(100vh - env(safe-area-inset-top));
     }
     
     .privacy-button {
@@ -168,12 +166,9 @@ $iphone-x-styles() {
     }
 
     .gdpr-pop-up {
-      bottom: constant(safe-area-inset-bottom);
       left: constant(safe-area-inset-left);
       width: calc(100vw - constant(safe-area-inset-left) - constant(safe-area-inset-right));
 
-
-      bottom: env(safe-area-inset-bottom);
       left: env(safe-area-inset-left);
       width: calc(100vw - env(safe-area-inset-left) - env(safe-area-inset-right));
     }
